# PAPK-test

./: .eslintrc.json  .gitignore  Package.swift  README.md  RubyVm.podspec  capacitor.config.ts  index.html  ionic.config.json  package-lock.json  package.json  rollup.config.mjs  tsconfig.json  vite.config.ts
android/: build.gradle  capacitor.settings.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/res/values/: strings.xml
android/gradle/: pluginLibs.versions.toml
android/src/main/cpp/jni/: CMakeLists.txt  jni_psdk.c  jni_psdk.h  ruby_vm_jni.c
android/src/main/java/com/scorbutics/rubyvm/: LogListener.kt  RubyInterpreter.kt  RubyScript.kt  RubyVM.java  (+4 more)
ios/Sources/RubyVMPlugin/: RubyVM.swift  RubyVMPlugin.swift
ios/Tests/RubyVMPluginTests/: RubyVMPluginTests.swift
scripts/: setup-symlinks.js
shared/src/main/cpp/: CMakeLists.txt
shared/src/main/cpp/assets/: CMakeLists.txt  embed_binary.cmake  install.c
shared/src/main/cpp/logging/: logging.c  logging.h
shared/src/main/cpp/ruby-vm/: CMakeLists.txt  completion-task.h  constants.h  exec-main-vm.c  exec-main-vm.h  log-listener.h  ruby-comm-channel.c  ruby-comm-channel.h  ruby-interpreter.c  ruby-interpreter.h  ruby-script.c  ruby-script.h  ruby-vm.c  ruby-vm.h
shared/src/main/ruby/: compile.rb
src/: App.tsx  AppTheme.ts  definitions.ts  global.d.ts  index.ts  main.tsx  preload.ts  web.ts
src/model/: Database.ts
src/model/dao/: ProjectDao.ts
src/model/entities/: Project.ts
src/pages/: Tab3.tsx
src/services/: AppInstaller.ts
(+1 files in other folders)
